[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btclient"
version = "0.1.0"
description = "Educational BitTorrent client demonstrating protocol, concurrency, and distributed systems concepts"
readme = "bittorrent_client/README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["btclient"]
package-dir = {"" = "bittorrent_client"}
